# idiff

./: .gitignore  CMakeLists.txt  CODE_REVIEW_origin_master_to_master.md  LICENSE  README.md  vcpkg.json
.github/workflows/: build-deps.yml  ci.yml  release.yml
resource/: idiff.icns
scripts/: macos_bundle_deps.sh  macos_install.command
src/app/: CMakeLists.txt  app.cpp  app.h  main.cpp  metrics_panel.cpp  metrics_panel.h  properties_panel.cpp  properties_panel.h  seedvr2_engine.cpp  seedvr2_engine.h  settings.cpp  settings.h  sr_dialog.cpp  sr_dialog.h  sr_infer_engine.cpp  sr_infer_engine.h  sr_infer_engine_factory.cpp  sr_infer_engine_factory.h  viewport.cpp  viewport.h
src/app/platform/: idiff.rc  platform.h  platform_macos.mm  platform_posix.cpp  platform_win32.cpp
src/core/: CMakeLists.txt  channel_view.cpp  channel_view.h  comparison_config.cpp  comparison_config.h  idiff.h  image.cpp  image.h  image_comparator.cpp  image_comparator.h  image_impl.h  image_loader.cpp  image_loader.h  image_processor.cpp  image_processor.h  media_source.cpp  media_source.h  metrics_engine.cpp  metrics_engine.h  ruler_utils.h  url_cache.cpp  url_cache.h
src/core/detail/: platform_utf8.h  raw_loader.cpp  raw_loader.h
tests/: CMakeLists.txt  test_channel_view.cpp  test_image.cpp  test_image_comparator.cpp  test_image_loader.cpp  test_image_processor.cpp  test_media_source.cpp  test_metrics_engine.cpp  test_ruler_utils.cpp  test_sr_engine.cpp  test_yuv_source.cpp
